feat: sync local changes for deployment, including i18n and bug fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,8 @@ alibabacloud-dypnsapi20170525
 alibabacloud-credentials
 alibabacloud-tea-openapi
 alibabacloud-tea-util
+authlib
+httpx
+itsdangerous
+stripe
 
